; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/extr_j4a_base.c_J4A_GetFieldID__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/extr_j4a_base.c_J4A_GetFieldID__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @J4A_GetFieldID__catchAll(%struct.TYPE_5__** %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_5__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i32* (%struct.TYPE_5__**, i32, i8*, i8*)**
  %14 = load i32* (%struct.TYPE_5__**, i32, i8*, i8*)*, i32* (%struct.TYPE_5__**, i32, i8*, i8*)** %13, align 8
  %15 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32* %14(%struct.TYPE_5__** %15, i32 %16, i8* %17, i8* %18)
  store i32* %19, i32** %9, align 8
  %20 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %21 = call i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__** %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %4
  %24 = load i32*, i32** %9, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %30, label %26

26:                                               ; preds = %23, %4
  %27 = load i8*, i8** %7, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = call i32 @J4A_FUNC_FAIL_TRACE2(i8* %27, i8* %28)
  store i32* null, i32** %9, align 8
  br label %31

30:                                               ; preds = %23
  br label %31

31:                                               ; preds = %30, %26
  %32 = load i32*, i32** %9, align 8
  ret i32* %32
}

declare dso_local i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__**) #1

declare dso_local i32 @J4A_FUNC_FAIL_TRACE2(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
